# mittere

./: .gitignore  Cargo.toml  README.md  config.toml  server-config-example.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  message.rs
mittere/: Cargo.toml
mittere-lib/: Cargo.toml
mittere-lib/src/: file.rs  lib.rs  logger.rs  network.rs  packet.capnp  packet_capnp.rs
mittere-lib/src/network/: cfg_data.rs  entry_point_io.rs  entry_response_io.rs  event_io.rs  login_data.rs  msg_data.rs  packet.rs  receive.rs  send.rs  varint.rs
mittere-lib/src/network/legacy_unfinished/: legacy_varint.rs
mittere-lib/src/proto_buff/: mod.rs  pbuff.proto  pbuff.rs
mittere-server/: Cargo.toml
mittere-server/src/: client.rs  command.rs  file.rs  main.rs
mittere/src/: gui.rs  input.rs  main.rs
server/: Cargo.toml
server/src/: channel.rs  config.rs  connection.rs  id_allocator.rs  logging.rs  main.rs
