[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Eric Sk3pz <skepz.dev@gmail.com>"]
description = "The common code for the mittere project"
license = "MIT"
repository = "https://github.com/sk3pz/mittere"
readme = "../README.md"

[dependencies]
common = { path = "../common" }
better_term = "1.4.61"
send-it = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
