[package]
name = "mittere-lib"
version = "0.1.0"
authors = ["eric (Skepz)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "*"
futures  = "*"
arc-swap = "*"
better_term = "*"
chrono = "*"

[dependencies.uuid]
version = "*"
features = ["v4"]