[package]
name = "mittere-server"
version = "1.0.0"
authors = ["eric (Skepz)"]
edition = "2018"

[dependencies]
better_term = "*"
mittere-lib = { path="../mittere-lib" }
chrono = "*"
capnp = "*"
capnpc = "*"
lazy_static = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
toml = "*"
serde = { version = "*", features = ["derive"] }