[package]
name = "mittere"
version = "1.0.0"
authors = ["Eric (Skepz)"]
edition = "2018"

[dependencies]
better_term = "*"
mittere-lib = { path="../mittere-lib" }
chrono = "*"
capnp = "*"
capnpc = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
vulkano = "*"
vulkano-win = "*"
winit = "*"