[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Eric Sk3pz <skepz.dev@gmail.com>"]
description = "The common code for the mittere project"
license = "MIT"
repository = "https://github.com/sk3pz/mittere"
readme = "../README.md"

[dependencies]
better_term = { version = "*", features = ["input", "output", "fancy"] }
send-it = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
toml = "*"
serde = { version = "*", features = ["derive"] }